--- a/src/Berger.Extensions.GraphQL/Berger.Extensions.GraphQL.csproj
+++ b/src/Berger.Extensions.GraphQL/Berger.Extensions.GraphQL.csproj
@@ -9,11 +9,11 @@
 		<PackageReference Include="GraphQL.Client" Version="6.0.1" />
 	</ItemGroup>
 
-	<ItemGroup Condition="'$(Configuration)' == 'Debug'">
+	<ItemGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
 		<ProjectReference Include="..\..\..\Berger.Extensions.Pagination\src\Berger.Extensions.Pagination\Berger.Extensions.Pagination.csproj" />
 	</ItemGroup>
 
-	<ItemGroup Condition="'$(Configuration)' == 'Release'">
+	<ItemGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
 		<PackageReference Include="Berger.Extensions.Pagination" Version="*" />
 	</ItemGroup>
 </Project>
