--- a/src/Berger.Extensions.GraphQL/Berger.Extensions.GraphQL.csproj
+++ b/src/Berger.Extensions.GraphQL/Berger.Extensions.GraphQL.csproj
@@ -14,6 +14,6 @@
 	</ItemGroup>
 
 	<ItemGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
-		<PackageReference Include="Berger.Extensions.Pagination" Version="*" />
+		<PackageReference Include="Berger.Extensions.Pagination" Version="1.0.0.17" />
 	</ItemGroup>
 </Project>
