--- a/src/Berger.Extensions.GraphQL/Berger.Extensions.GraphQL.csproj
+++ b/src/Berger.Extensions.GraphQL/Berger.Extensions.GraphQL.csproj
@@ -13,7 +13,7 @@
 		<ProjectReference Include="$(berger-open-source)\Berger.Extensions.Pagination\src\Berger.Extensions.Pagination\Berger.Extensions.Pagination.csproj" />
 	</ItemGroup>
 
-	<ItemGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
-		<PackageReference Include="Berger.Extensions.Pagination" Version="1.0.0.17" />
+	<ItemGroup>
+		<PackageReference Include="Berger.Extensions.Pagination" Version="1.0.0.20" />
 	</ItemGroup>
 </Project>
